<resources>
    <string name="app_name">Nimpat_burhan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="item1">My Bids</string>
    <string name="item2">My Purchases</string>
    <string name="item3">My Profile</string>
    <string name="item4">Transaction History</string>
    <string name="item5">Settings</string>
    <string name="item6">Wishlist</string>
    <string name="item7">Contact Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
</resources>
